optimized some class.